--- a/templates/agregar-artesano.html
+++ b/templates/agregar-artesano.html
@@ -36,14 +36,14 @@
             <option value="5">metal</option>
             <option value="6">cuero</option>
             <option value="7">telas</option>
-            <option value="6">joyas</option>
-            <option value="7">otro</option>
+            <option value="8">joyas</option>
+            <option value="9">otro</option>
         </select>
         <div id="foto-container">
           <label id="foto-label" for="foto-1">Foto Artesania</label>
-          <input id="foto-1" type="file" name="foto-1"multiple accept="image/*,.pdf">
-          <input id="foto-2" type="file" name="foto-2"multiple accept="image/*,.pdf">
-          <input id="foto-3" type="file" name="foto-3"multiple accept="image/*,.pdf">
+          <input id="foto-1" type="file" name="foto-1" >
+          <input id="foto-2" type="file" name="foto-2" >
+          <input id="foto-3" type="file" name="foto-3" >
         </div>
           <label for="descripcion">Descripcion Artesania</label>
           <input type="text" id="descripcion" name="descripcion" maxlength="80" placeholder="Ingrese su Descripcion">
